name:                vpw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dvekeman/vpw#readme
license:             BSD3
license-file:        LICENSE
author:              Dieter Vekeman
maintainer:          dieter.vekeman@gmail.com
copyright:           (c) 2017 Dieter Vekeman
category:            CLI Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      blocks
  ghc-options:         -Wall -O2
  exposed-modules:     Blocks
  other-modules:
  build-depends:       base
  default-language:    Haskell2010

-- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
executable app1-exe
  hs-source-dirs:      app1
  main-is:             app.hs
  ghc-options:         -Wall -O2
  build-depends:       base
  default-language:    Haskell2010

executable blocks-exe
  hs-source-dirs:      blocks
  main-is:             Blocks.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , vpw
  default-language:    Haskell2010
test-suite blocks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      blocks-test
  main-is:             Spec.hs
  build-depends:       base
                     , vpw
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable minmax1-exe
  hs-source-dirs:      minmax1
  main-is:             minmax.hs
  ghc-options:         -Wall -O2
  build-depends:       base
  default-language:    Haskell2010
executable minmax2-exe
  hs-source-dirs:      minmax2
  main-is:             app.hs
  ghc-options:         -Wall -O2
  build-depends:       base
  default-language:    Haskell2010
--
--executable app4-exe
--  hs-source-dirs:      app4
--  main-is:             app.hs
--  ghc-options:         -Wall -O2
--  build-depends:       base
--  default-language:    Haskell2010
--
--executable app5-exe
--  hs-source-dirs:      app5
--  main-is:             app.hs
--  ghc-options:         -Wall -O2
--  build-depends:       base
--  default-language:    Haskell2010
--
--executable app6-exe
--  hs-source-dirs:      app6
--  main-is:             app.hs
--  ghc-options:         -Wall -O2
--  build-depends:       base
--  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/dvekeman/vpw
